--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 .App {
   text-align: center;
+  background: rgba(255, 255, 255, 1);
+}
+
+main {
+  min-height: 100vh;
+  padding-top: 0px;
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
 }
