--- a/src/components/StorieObject/styles.module.css
+++ b/src/components/StorieObject/styles.module.css
@@ -8,6 +8,7 @@
   min-width: 100%;
   width: 56px;
   height: 56px;
+  border: 2px solid red;
 }
 
 .imageContainer {
@@ -28,7 +29,7 @@
 }
 
 .username {
-  color: rgba(var(--i1d, 38, 38, 38), 1);
+  color: rgba((38, 38, 38), 1);
   display: block;
   font-size: 12px;
   line-height: 16px;
