--- a/src/components/Publication/styles.module.css
+++ b/src/components/Publication/styles.module.css
@@ -38,7 +38,7 @@
 
 .actionsWrapper {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: flex-start;
   padding: 0 16px;
   margin-top: 10px;
@@ -50,4 +50,53 @@
   width: 2.5rem;
   border: none;
   cursor: pointer;
+  padding: 0;
+  text-align: left;
+}
+
+.actionIcons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.likes {
+  font-weight: 600;
+  white-space: nowrap;
+  font-size: 14px;
+  line-height: 18px;
+  margin-bottom: 8px;
+  margin-top: 8px;
+}
+
+.descriptionWrapper {
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  text-align: left;
+}
+
+.descriptionWrapper a {
+  position: relative;
+  margin-right: 5px;
+  padding: 0;
+  margin-block-end: 0;
+  margin-block-start: 0;
+  font-size: 14px;
+  font-weight: 600;
+  color: #000000;
+}
+
+.description {
+  display: inline;
+  font-weight: 400;
+  line-height: 18px;
+}
+
+.publishDate {
+  font-size: 12px;
+  font-weight: 400;
+  color: #9b9b9b;
+  margin-top: 8px;
 }
